--- a/public/404.html
+++ b/public/404.html
@@ -699,7 +699,7 @@
   
 
   <p class="powered-by">
-    
+    © Anusha Avyukt, 2020 &middot; 
 
     Powered by the
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
