--- a/public/index.html
+++ b/public/index.html
@@ -2571,7 +2571,7 @@ Highlight your code snippets, take notes on math classes, and draw diagrams from
   
 
   <p class="powered-by">
-    
+    © Anusha Avyukt, 2020 &middot; 
 
     Powered by the
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
